--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "get-all": "node src/scripts/getAllContacts",
-    "generate": "node src/scripts/generateContacts.js",
-    "add-one": "node src/scripts/addOneContact.js",
-    "count": "node src/scripts/countContacts.js",
-    "remove-last": "node src/scripts/removeLastContact.js",
-    "remove-all": "node src/scripts/removeAllContacts.js"
+  "get-all": "node src/scripts/getAllContacts.js",
+  "generate": "node src/scripts/generateContacts.js",
+  "add-one": "node src/scripts/addOneContact.js",
+  "count": "node src/scripts/countContacts.js",
+  "remove-last": "node src/scripts/removeLastContact.js",
+  "remove-all": "node src/scripts/removeAllContacts.js"
   },
   "keywords": [],
   "author": "",
@@ -19,5 +19,8 @@
     "@eslint/js": "^9.2.0",
     "eslint": "^9.2.0",
     "globals": "^15.1.0"
+  },
+  "dependencies": {
+    "@faker-js/faker": "^9.8.0"
   }
 }
